# csp-billing-adapter-local

./: CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  csp-billing-adapter-local.spec  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-workflow.yml
csp_billing_adapter_local/: __init__.py  plugin.py
tests/data/: config.yaml
tests/data/bad/: archive.json  cache.json  csp_config.json
tests/data/good/: archive.json  cache.json  csp_config.json
tests/unit/: test_plugin.py
