[bumpversion]
current_version = 0.2.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:csp_billing_adapter_local/__init__.py]

[bumpversion:file:csp-billing-adapter-local.spec]

[tool:pytest]
testpaths = tests

[coverage:report]
fail_under = 90

[metadata]
license_file = LICENSE
